docs/tests/typing/bad/testfile-incomplete_type-1.cpp
class A { public: A a; };
int main() {}

